@@ -1,5 +1,6 @@
 Version 2.7.4dev:
 
+* Show on-screen messages when using disk swapper prev/next/insert actions.
 * New option relative_paths (see docs).
 * Support for three additional custom "joystick ports" (maps to Amiga keys).
 * Also recognize .ipf and .dms floppy paths as standalone parameters.
